rovo-servlet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rovo-iot-platform-ingress
  namespace : rovo
  # annotations:
  #   spec.ingressClassName: "nginx"
  #   nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - "agrio.rovo.com"
  rules:
  - host: "agrio.rovo.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rovo-iot-platform-service
            port: 
              number: 80
